--- a/package.json
+++ b/package.json
@@ -1,30 +1,41 @@
 {
-  "name": "byteperks",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon --watch src --exec node ./src/server.js",
-    "migrate:up": "npx sequelize-cli db:migrate",
-    "migrate:down": "npx sequelize-cli db:migrate:undo",
-    "migrate:down:all": "npx sequelize-cli db:migrate:undo:all",
-    "seed:all": "npx sequelize-cli db:seed:all",
-    "seed:undo": "npx sequelize-cli db:seed:undo",
-    "seed:undo:all": "npx sequelize-cli db:seed:undo:all",
-    "migration": "npx sequelize-cli migration:generate --name skeleton"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "mysql2": "^3.6.1",
-    "sequelize": "^6.33.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1",
-    "sequelize-cli": "^6.6.1"
-  }
+    "name": "byteperks",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "node src/server.js ",
+        "dev": "nodemon --watch src --exec node ./src/server.js",
+        "refresh-dummy-data": "npx sequelize-cli db:migrate && node ./swagger.js",
+        "swagger": "node ./swagger.js",
+        "migrate:up": "npx sequelize-cli db:migrate",
+        "migrate:down": "npx sequelize-cli db:migrate:undo",
+        "migrate:down:all": "npx sequelize-cli db:migrate:undo:all",
+        "seed": "npx sequelize-cli seed:generate --name demo-",
+        "seed:all": "npx sequelize-cli db:seed:all",
+        "seed:undo": "npx sequelize-cli db:seed:undo",
+        "seed:undo:all": "npx sequelize-cli db:seed:undo:all",
+        "migration": "npx sequelize-cli migration:generate --name skeleton"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "handlebars": "^4.7.8",
+        "knex": "^3.0.1",
+        "multer": "1.4.5-lts.1",
+        "mysql2": "^3.6.1",
+        "node-fetch": "^3.3.2",
+        "nodemailer": "^6.9.6",
+        "sequelize": "^6.33.0",
+        "swagger-autogen": "2.23.5",
+        "swagger-ui-express": "^5.0.0"
+    },
+    "devDependencies": {
+        "nodemon": "^3.0.1",
+        "sequelize-cli": "^6.6.1"
+    }
 }
